objects/ZIP_Code__c.object
<CustomObject>
    <fields>
        <fullName>MSA_Name__c</fullName>
        <label>MSA Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_ID__c</fullName>
        <externalId>true</externalId>
        <label>Zip Code ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>Custom object to store the MSA-Zip code reference</description>
    <label>ZIP Code</label>
    <nameField>
        <label>ZIP Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZIP Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MSA_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>